--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ajalàb Design Studio</title>
-    <link rel="stylesheet" href="style.css">
+    <title>AJALÀB&trade; | Design Studio</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="assets/css/style.css"> <!-- Collegamento al CSS esterno -->
 </head>
 <body>
-    <div class="container">
-        <h1>Website Under Construction</h1>
-        <img id="constructionGif" src="" alt="Under Construction" class="construction-gif">
+    <div class="container-fluid px-2">
+        <header class="d-flex justify-content-between align-items-center py-2 mt-4">
+            <div class="d-flex align-items-center gap-3">
+                <a class="header-link">Andrea Nicolardi</a>
+                <a href="https://fspezzano.it" class="header-link">Francesco Spezzano</a>
+            </div>
+            <div>
+                <a class="header-link" id="clock"></a>
+            </div>
+        </header>
+        <div class="separator"></div>
+        <div class="text-center">
+            <h1 id="title" class="title">AJALÀB</h1>
+        </div>
+        <div class="container">
+            <div class="scroll" id="scroll"></div>
+        </div>
     </div>
 
-    <script src="script.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/scroll.js"></script>
+    <script src="assets/js/clock.js"></script>
 </body>
 </html>
