--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a class="header-link">Andrea Nicolardi</a>
                 <a href="https://fspezzano.it" class="header-link">Francesco Spezzano</a>
             </div>
-            <div>
+            <div class="d-flex align-items-center">
                 <a class="header-link" id="clock"></a>
             </div>
         </header>
