--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AJALÀB&trade; | Design Studio</title>
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/style.css"> <!-- Collegamento al CSS esterno -->
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" href="assets/favicon/icon.svg">
+    <link rel="apple-touch-icon" href="assets/favicon/apple-touch-icon.png">
+    <link rel="manifest" href="assets/favicon/site.webmanifest">
 </head>
 <body>
     <div class="container-fluid px-2">
@@ -40,7 +41,7 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/scroll.js"></script>
+    <!--<script src="assets/js/scroll.js"></script>-->
     <script src="assets/js/clock.js"></script>
 </body>
 </html>
