--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
                 <a href="https://fspezzano.it" class="header-link">Francesco Spezzano</a>
             </div>
             <div class="d-flex align-items-center">
-                <a class="header-link" id="clock"></a>
+                <a class="header-link" id="countdown"></a>
             </div>
         </header>
         <div class="separator"></div>
+        <div class="container">           
+            <div class="scroll" id="scroll-upper"></div>
+        </div>
         <div class="text-center">
             <h1 id="title" class="title">AJALÀB</h1>
         </div>
@@ -41,7 +44,7 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    <!--<script src="assets/js/scroll.js"></script>-->
-    <script src="assets/js/clock.js"></script>
+    <script src="assets/js/scroll.js"></script>
+    <script src="assets/js/countdown.js"></script>
 </body>
 </html>
