--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
             <div class="scroll" id="scroll-upper"></div>
         </div>
         <div class="text-center">
-            <h1 id="title" class="title">AJALÀB</h1>
+            <a class="title-anchor" href="index_v2.html">
+                <h1 id="title" class="title">AJALÀB</h1>
+            </a>
         </div>
         <div class="description">
             <p>
