removed link to v2 page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="scroll" id="scroll-upper"></div>
         </div>
         <div class="text-center">
-            <a class="title-anchor" href="index_v2.html">
+            <a class="title-anchor" href="#">
                 <h1 id="title" class="title">AJALÀB</h1>
             </a>
         </div>
